--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
             height: 100vh;
             background: black;
         }
-        video {
+        iframe {
             max-width: 100%;
             max-height: 100%;
         }
     </style>
 </head>
 <body>
-    <video controls autoplay>
-        <source src="https://v.mover.uz/3jryEzmy_h.mp4" type="video/mp4">
-    </video>
+    <iframe width="640" height="360" src="https://mover.uz/video/embed/3jryEzmy" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
